Debugging SDL window closure

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,12 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Attach",
+            "name": "(gdb) Launch",
             "type": "cppdbg",
-            "request": "attach",
-            "program": "enter program name, for example ${workspaceFolder}/a.exe",
+            "request": "launch",
+            "program": "emulator.exe",           
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
             "MIMode": "gdb",
-            "miDebuggerPath": "/path/to/gdb",
+            "args": [],            
+            "miDebuggerPath": "C:\\msys64\\mingw64\\bin\\gdb.exe", 
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
@@ -24,7 +29,5 @@
                 }
             ]
         }
-
-
     ]
 }
